k8s/grafana/grafana-virtualService.yaml
# virtualservice определяем правила маршрутизации
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: logistic-package
spec:
  hosts:
    - "grafana.k3s.dev.com"
  gateways:
    - "logistic-package/gateway"
  http:
    - route:
        - destination:
            host: grafana.logistic-package.svc.cluster.local
            port:
              number: 3000
